Basic task submit configured

--- a/client/Templates/Applications/layout.html
+++ b/client/Templates/Applications/layout.html
@@ -1,5 +1,10 @@
-<template name="Layout">
-
+<template name="homeLayout">
   {{> sideBar}}
   {{> whiteBoard}}
+</template>
+
+
+<template name="taskLayout">
+  {{> sideBar}}
+  {{> yield}}
 </template>
