1. Added cancle button functionality 2. Cleaned up formating of html template for adding a new task

--- a/client/Templates/Views/new_Task/add_newTaskForm.html
+++ b/client/Templates/Views/new_Task/add_newTaskForm.html
@@ -1,130 +1,106 @@
 <template name="newTaskForm">
 
-
 <div class="ui two column grid">
-  <div class="column">
+<!-- Right Segment -->
+<div class="column">
+  <div class="ui segment">
+  <!-- Task Name -->
     <div class="ui segment">
-
-
-<!-- Task Name -->
-<div class="ui segment">
-<h4 class="ui black block header">
-Task Name
-</h4>
-  <div class="ui fluid input">
-  <input type="text" placeholder="Name..." name="taskName">
-  </div>
-</div>
-
-
-
-
+      <h4 class="ui black block header">
+      Task Name
+      </h4>
+      <div class="ui fluid input">
+        <input type="text" placeholder="Name..." name="taskName">
+      </div>
+    </div>
 <!-- Checkpoint List-->
-<div class="ui segment">
-
-<form class="ui fluid action input" id="checkPointForm">
-  <button class="fluid ui button" id="fullWidth" type="submit">
-    Add Checkpoints
-  </button>
-
-  <div class="ui fluid input">
-  <input type="text" name="checkPoint" placeholder="Start Reasurch On...." value="">
-  </div>
-</form>
-
-<div class="ui segment">
-
-{{#if deleteCheckPoint}}
-<div class="ui red message" id="centerText">Are you sure you want to delete the <b>{{deleteCheckPointName.name}}</b> checkpoint?
-  <div class="ui horizontal icon divider">
-  <i class="circular heart icon"></i>
-  </div>
-  <div class="ui segment" id="deleteButtionOptions">
-    <a class="ui black button floated left" id="cancle_deleteCheckPoint">Cancle</a>
-    <a class="ui red button floated right" id="confirm_deleteCheckPoint">Delete</a>
-  </div>
-</div>
-{{/if}}
-
+    <div class="ui segment">
+<!-- Add Checkpoint button -->
+      <form class="ui fluid action input" id="checkPointForm">
+        <button class="fluid ui button" id="fullWidth" type="submit">
+        Add Checkpoints
+        </button>
+<!-- Add Checkpoint Input -->
+        <div class="ui fluid input">
+          <input type="text" name="checkPoint" placeholder="Start Reasurch On...." value="">
+        </div>
+      </form>
+<!-- CheckPoint Segment -->
+      <div class="ui segment">
+<!-- Delete Checkpoint Prompt -->
+        {{#if deleteCheckPoint}}
+          <div class="ui red message" id="centerText">Are you sure you want to delete the <b>{{deleteCheckPointName.name}}</b> checkpoint?
+            <div class="ui horizontal icon divider">
+              <i class="circular heart icon"></i>
+            </div>
+            <div class="ui segment" id="deleteButtionOptions">
+              <a class="ui black button floated left" id="cancle_deleteCheckPoint">Cancle</a>
+              <a class="ui red button floated right" id="confirm_deleteCheckPoint">Delete</a>
+            </div>
+          </div>
+        {{/if}}
 <!-- If No checkpoints created -->
-<div class="inline field">
-{{#if emptyCheckPointList}}
-<div class="ui red ribbon label">No Checkpoints Establised</div>
-{{/if}}
-
-{{#each checkpoint}}
-<div class="ui celled list sortable">
-  <div class="item newTaskCheckPoint">
-<!-- Trash/sort can Icon-->
-<i class="trash icon" id="trashCheckpoint"></i>
-<i class="sort icon floated right"></i>
-    <div class="content">
-      <div class="header">{{name}}</div>
+        <div class="inline field">
+          {{#if emptyCheckPointList}}
+            <div class="ui red ribbon label">No Checkpoints Establised</div>
+          {{/if}}
+<!-- Add each new checkpoint -->
+          {{#each checkpoint}}
+            <div class="ui celled list sortable">
+              <div class="item newTaskCheckPoint">
+              <!-- Trash/sort can Icon-->
+              <i class="trash icon" id="trashCheckpoint"></i>
+              <i class="sort icon floated right"></i>
+                <div class="content">
+                  <div class="header">{{name}}</div>
+                </div>
+              </div>
+            </div>
+          {{/each}}
+        </div>
+      </div>
     </div>
+<!-- End of right segment -->
   </div>
 </div>
-
-{{/each}}
-  </div>
-
-
-</div>
-
-    </div>
-  </div>
-</div>
-
 
 <!-- Left Segment -->
-<div class="column">
-<div class="ui segment">
-
-<div class="ui segment">
-<h4 class="ui black block header">
-Priority Rating
-<span>
-<div class="ui large star rating">
-  <i class="icon"></i>
-  <i class="icon"></i>
-  <i class="icon"></i>
-  <i class="icon"></i>
-  <i class="icon"></i>
-</div>  
-</span>
-
-</h4>
-</div>
-
-
-<!-- Description -->
-<div class="ui segment">
-<div class="ui form">
-<div class="field">
-<h4 class="ui black block header">
-Task Description
-</h4>
-<textarea name="taskDescription"></textarea>
-</div>
-</div>
-
-
-
+  <div class="column">
+    <div class="ui segment">
+<!-- Proiority Rating -->
+    <div class="ui segment">
+      <h4 class="ui black block header">
+      Priority Rating
+      <span>
+        <div class="ui large star rating">
+          <i class="icon"></i>
+          <i class="icon"></i>
+          <i class="icon"></i>
+          <i class="icon"></i>
+          <i class="icon"></i>
+        </div>
+      </span>
+      </h4>
     </div>
+ <!-- Task Description -->
+    <div class="ui segment">
+      <div class="ui form">
+        <div class="field">
+          <h4 class="ui black block header">
+          Task Description
+          </h4>
+          <textarea name="taskDescription"></textarea>
+        </div>
+      </div>
+    </div>
+    </div>
+<!-- End of left Segment -->
   </div>
 </div>
-
-
-
-
-
-</div>
-
-
-
-
-<div class="ui buttons floated right">
-  <div class="ui button">Cancel</div>
-  <div class="or"></div>
-  <div class="ui positive button" id="saveTask">Save</div>
-</div>
+<!-- Save or Cancle Buttons -->
+  <div class="ui buttons floated right">
+    <div class="ui button" id="cancleTask">Cancel</div>
+    <div class="or"></div>
+    <div class="ui positive button" id="saveTask">Save</div>
+  </div>
 </template>
