--- a/client/Templates/Applications/layout.html
+++ b/client/Templates/Applications/layout.html
@@ -1,7 +1,16 @@
+
+
 <template name="homeLayout">
   {{> sideBar}}
-  {{> whiteBoard}}
+  {{> home_Login}}
 </template>
+
+
+
+<!-- <template name="homeLayout">
+  {{> sideBar}}
+  {{> whiteBoard}}
+</template> -->
 
 
 <template name="taskLayout">
