--- a/client/Templates/Includes/sideBar.html
+++ b/client/Templates/Includes/sideBar.html
@@ -2,6 +2,7 @@
 <template name="sideBar">
   <div class="ui sidebar">
     <div class="ui red vertical demo sidebar menu">
+<!-- Home Link -->
     {{#linkTo route='home.link'}}
     <a class="item">
       <i class="home icon"></i>
@@ -9,20 +10,20 @@
     </a>
     {{/linkTo}}
     <a class="active item">
-      <i class="heart icon"></i>
-      Current Section
+      <i class="archive icon"></i>
+      My Projects
     </a>
+    <div class="item">
+      <b>Open Projects</b>
+      <div class="menu">
+        <a class="item">Make</a>
+        <a class="item">Contact Us</a>
+      </div>
+    </div>
     <a class="item">
       <i class="facebook icon"></i>
       Like us on Facebook
     </a>
-    <div class="item">
-      <b>More</b>
-      <div class="menu">
-        <a class="item">About</a>
-        <a class="item">Contact Us</a>
-      </div>
-    </div>
     </div>
   </div>
 </template>
